Updated Result UI

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         {% block content %}{% endblock %}
     </main>
     <footer>
-        <p>&copy; 2024 Mad AI Libs. All Rights Reserved.</p>
+        <p>&copy; Mad AI Libs. GAITS Final Project. Asiandabber31 (Pakshal) & Mytlarz (Derek)</p>
     </footer>
 </body>
 </html>
