--- a/static/styles.css
+++ b/static/styles.css
@@ -17,7 +17,7 @@ header {
 footer {
     background-color: #ffda79;
     color: #333;
-    padding: 0.5rem 0;
+    padding: 0px 0;
     border-top: 4px solid #ffa500;
     position: fixed;
     bottom: 0;
